# robomake

./: .gitignore  LICENSE  README.md  dub.json  dub.selections.json
resources/: CMakeLists.testing.cmake  CMakeLists.txt  CMakeLists.txt.1  CMakeLists.txt.2  CMakeLists.txt.3  CMakeLists.txt.gtest  CMakeLists.txt.testing  FindWPILib.cmake  GTest.txt.in  arm-frc-toolchain.cmake
resources/code/: ExampleTest.cpp  NumberSubsystem.cpp  NumberSubsystem.hpp  Robot-notest.cpp  Robot-notest.hpp  Robot.cpp  Robot.hpp
resources/unix/: c_cpp_properties.json  cmake-kits.json
resources/win32/: c_cpp_properties.json
source/: app.d
source/robomake/: build.d  cmake.d  commands.d  console.d  deploy.d  libraries.d
